Add deployment configuration files and update application files (without sensitive data)